fixtures/errors/duplicate_symbol.hu
tagaxis my_axis {
  role: classificatory
  display: { en: "My Axis" }
}

tagaxis my_axis {
  role: inflectional
  display: { en: "My Axis Again" }
}
